src/test/deca/context/invalid/provided/testi35.deca
class A{
    int x = 2;
    int getX(){
        return this.x;
    }
    void setX(){
        int y = setX();
    }
}
